--- a/exporters.yml
+++ b/exporters.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: self
-  become_user: root
+  become: true
   roles:
     - role: ./ansible-node-exporter
-      node_exporter_version: 0.17.0
+      node_exporter_version: 0.18.1
       node_exporter_web_listen_address: '0.0.0.0:9100'
       node_exporter_system_group: 'node_exporter'
       node_exporter_system_user: 'node_exporter'
